Begin color picking work

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,6 +8,7 @@
 <body>
 <div class="grid-container">
     <div class="header">PixIOTA</div>
+    <div class="picker" id="picker"></div>
     <div class="content">
         <div class="canvas-wrapper">
             <canvas id="canvas"></canvas>
