--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,9 @@
 <body>
 <div class="grid-container">
     <div class="header">PixIOTA</div>
-    <div class="picker" id="picker"></div>
+    <div class="picker">
+        <div class="color-picker-container"></div>
+    </div>
     <div class="content">
         <div class="canvas-wrapper">
             <canvas id="canvas"></canvas>
