Row and label for selection

--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,10 @@
 <div class="grid-container">
     <div class="header">PixIOTA</div>
     <div class="picker">
-        <div class="color-picker-container"></div>
+        <div class="label"><span>1</span> Pick a color</div>
+        <div class="row-content color-picker-container"></div>
+        <div class="label"><span>2</span> Pick someone to tip</div>
+        <div class="row-content">...</div>
     </div>
     <div class="content">
         <div class="canvas-wrapper">
