--- a/assets/index.html
+++ b/assets/index.html
@@ -17,6 +17,7 @@
     <div class="content">
         <div class="canvas-wrapper">
             <canvas id="canvas"></canvas>
+            <div class="preview-pixel"></div>
         </div>
     </div>
     <div class="footer">Some footer</div>
