--- a/assets/index.html
+++ b/assets/index.html
@@ -13,7 +13,7 @@
     <div class="picker">
         <div class="label"><span>1</span> Pick a color</div>
         <div class="row-content color-picker-container"></div>
-        <div class="label"><span>2</span> Pick someone to tip</div>
+        <div class="label"><span>2</span> Pick a project</div>
         <div class="row-content">...</div>
     </div>
     <div class="content">
