Some css adjustments and ProjectBar class

--- a/assets/index.html
+++ b/assets/index.html
@@ -17,10 +17,12 @@
         <span>Made with &heartsuit; by acelis</span>
     </div>
     <div class="picker">
-        <div class="label"><span>1</span> Pick a color</div>
+        <div class="label">Pick a color</div>
         <div class="row-content color-picker-container"></div>
-        <div class="label"><span>2</span> Pick a project</div>
-        <div class="row-content">...</div>
+        <label for="project" class="label">Pick a project</label>
+        <div class="row-content">
+            <select name="project" id="project"></select>
+        </div>
     </div>
     <div class="content">
         <div class="canvas-wrapper">
