Begin work on project-bar

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>PixIOTA</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="theme-color" content="#2f3a43"/>
 </head>
 <body>
 <div class="grid-container">
@@ -29,6 +30,7 @@
             <canvas id="canvas"></canvas>
             <div class="preview-pixel"></div>
         </div>
+        <div class="project-bar hidden">This is a project bar</div>
     </div>
 </div>
 
