Avoid UI poping

--- a/assets/index.html
+++ b/assets/index.html
@@ -22,7 +22,7 @@
         <div class="row-content color-picker-container"></div>
         <label for="project" class="label">Pick a project</label>
         <div class="row-content">
-            <select name="project" id="project"></select>
+            <select name="project" id="project" class="hidden"></select>
         </div>
     </div>
     <div class="content">
