Randomized project picker

--- a/assets/index.html
+++ b/assets/index.html
@@ -20,7 +20,7 @@
     <div class="picker">
         <div class="label">Pick a color</div>
         <div class="row-content color-picker-container"></div>
-        <label for="project" class="label">Pick a project</label>
+        <label for="project" class="label" data-more="For fairness, projects are sorted randomly">Pick a project</label>
         <div class="row-content">
             <select name="project" id="project" class="hidden"></select>
         </div>
