--- a/assets/index.html
+++ b/assets/index.html
@@ -30,7 +30,12 @@
             <canvas id="canvas"></canvas>
             <div class="preview-pixel"></div>
         </div>
-        <div class="project-bar hidden">This is a project bar</div>
+        <div class="project-bar hidden">
+            <div id="qrcode"></div>
+            <div class="project-name"></div>
+            <div class="project-address"></div>
+            <div class="pixel-message"></div>
+        </div>
     </div>
 </div>
 </body>
