Refactor color pickers loading (no blink on reload)

--- a/assets/index.html
+++ b/assets/index.html
@@ -20,7 +20,24 @@
     <div class="picker">
         <div class="label mobile-only">Pick a color and a project</div>
         <div class="label desktop-only">Pick a color</div>
-        <div class="row-content color-picker-container"></div>
+        <div class="row-content color-picker-container">
+            <div class="color-picker" data-color-index="0"></div>
+            <div class="color-picker" data-color-index="1"></div>
+            <div class="color-picker" data-color-index="2"></div>
+            <div class="color-picker" data-color-index="3"></div>
+            <div class="color-picker" data-color-index="4"></div>
+            <div class="color-picker" data-color-index="5"></div>
+            <div class="color-picker" data-color-index="6"></div>
+            <div class="color-picker" data-color-index="7"></div>
+            <div class="color-picker" data-color-index="8"></div>
+            <div class="color-picker" data-color-index="9"></div>
+            <div class="color-picker" data-color-index="10"></div>
+            <div class="color-picker" data-color-index="11"></div>
+            <div class="color-picker" data-color-index="12"></div>
+            <div class="color-picker" data-color-index="13"></div>
+            <div class="color-picker" data-color-index="14"></div>
+            <div class="color-picker" data-color-index="15"></div>
+        </div>
         <label for="project" class="label desktop-only" data-more="For fairness, projects are sorted randomly">Pick a
             project</label>
         <div class="row-content">
@@ -38,7 +55,9 @@
             </div>
             <div>
                 <p>You're about to donate to <span class="project-name"></span>.</p>
-                <p class="desktop-only">← This QRCode can be scanned with <a href="https://trinity.iota.org/" target="_blank">Trinity</a> to pre-fill your fields!</p>
+                <p class="desktop-only">← This QRCode can be scanned with <a href="https://trinity.iota.org/"
+                                                                             target="_blank">Trinity</a> to pre-fill
+                    your fields!</p>
                 <p>Donation address: <span class="project-address"></span><br>
                     You need to join this message to your donation: <span class="pixel-message"></span></p>
                 <p>Once your transaction gets confirmed, your pixel will be shown. Thanks for contributing!</p>
