--- a/assets/index.html
+++ b/assets/index.html
@@ -65,5 +65,12 @@
         </div>
     </div>
 </div>
+<script>
+    if (!window.Promise || !window.fetch) {
+        document.write("<script src=\"https://cdn.polyfill.io/v2/polyfill.js?features=Promise,fetch&callback=runPixIOTA\" async>");
+    } else {
+        startPixIOTA();
+    }
+</script>
 </body>
 </html>
