fetch crossorigin tag

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
     <title>PixIOTA</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="theme-color" content="#2f3a43"/>
-    <link rel="preload" href="<%= preloadMapUrl %>" as="fetch">
+    <link rel="preload" href="<%= preloadMapUrl %>" as="fetch" crossorigin>
 </head>
 <body>
 <div class="grid-container">
