--- a/assets/index.html
+++ b/assets/index.html
@@ -16,7 +16,7 @@
             </svg>
             <div>
                 <span class="beta"><span class="big">βeta</span>(all donations goes towards this site's development)</span>
-                <span>Tip IOTA community developers and get your pixel drawn</span>
+                <span>Tip IOTA ecosystem developers and get your pixel drawn</span>
             </div>
         </div>
         <span>Made with <span class="heart">&heartsuit;</span> by acelis</span>
