Min amount message

--- a/assets/index.html
+++ b/assets/index.html
@@ -63,6 +63,7 @@
                     your fields!</p>
                 <p>Donation address: <span class="project-address"></span><br>
                     You need to join this message to your donation: <span class="pixel-message"></span></p>
+                <p>Minimum amount required to validate a pixel is <strong>1 iota</strong>.</p>
                 <p>Once your transaction gets confirmed, your pixel will be shown. Thanks for contributing!</p>
             </div>
         </div>
