Added Google Analytics tag

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,14 @@
     <title>PixIOTA</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="theme-color" content="#2f3a43"/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120913769-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-120913769-1');
+    </script>
 </head>
 <body>
 <div class="grid-container">
