--- a/assets/index.html
+++ b/assets/index.html
@@ -22,7 +22,7 @@
                 <path d="M166.4 14.3l12.3 29.2h6.2L166.4 0l-18.5 43.5h6.2zM133.7.4H124v5.7h11.5v37.4h5.8V6h11.5V.4H143zM105.9.1c-3 0-5.9.5-8.4 1.6a22.2 22.2 0 0 0-11.9 12c-1 2.5-1.5 5.2-1.5 8.3a21 21 0 0 0 6.4 15.5 20.7 20.7 0 0 0 15.4 6.4 21.6 21.6 0 0 0 15.5-6.4 21.7 21.7 0 0 0 6.5-15.5c0-3-.6-5.8-1.7-8.4a22.9 22.9 0 0 0-12-12c-2.5-1-5.2-1.5-8.3-1.5zm0 5.8c2.2 0 4.2.4 6.1 1.2 2 .8 3.7 2 5.2 3.5a15.6 15.6 0 0 1 4.7 11.3c0 2.3-.3 4.3-1.1 6.2a16 16 0 0 1-3.6 5.2 15.6 15.6 0 0 1-11.3 4.6 15.6 15.6 0 0 1-11.3-4.6A15.6 15.6 0 0 1 89.9 22a15.7 15.7 0 0 1 4.7-11.3C96.1 9 97.8 7.8 99.8 7c1.9-.8 4-1.2 6.1-1.2zM74.2 43.5H80V.5h-5.8zM42 4.5l10.6 18.7.5.7-.5.9-10.7 18.7h6l6.8-11.8 1.4-2.5 1.4 2.5 6.8 11.8h6L59.5 24.8 59 24l.5-.8L70.2 4.5h-6l-6.8 11.8-1.4 2.4-1.4-2.4-6.8-11.8zm-9 39h5.2v-39H33zM0 43.5h5.8v-14h8.8c2 0 3.8-.4 5.6-1 1.7-.8 3.3-1.8 4.7-3.3a15 15 0 0 0 3.2-4.6c.7-1.7 1-3.6 1-5.6 0-2-.3-3.9-1-5.6a15.3 15.3 0 0 0-8-8c-1.6-.6-3.5-1-5.5-1H0v30.9zM5.8 22V6h8.8c1.2 0 2.3.2 3.4.7a9.3 9.3 0 0 1 4.7 4.8c.5 1 .7 2.2.7 3.4 0 1.2-.2 2.4-.7 3.4a9.1 9.1 0 0 1-4.8 4.8c-1 .4-2.1.6-3.3.6H5.8z"/>
             </svg>
             <div>
-                <span class="beta"><span class="big">βeta</span>(all donations goes towards this site's development)</span>
+                <span class="beta"><span class="big">βeta</span>(in this version, donations go to this site)</span>
                 <span>Tip IOTA ecosystem developers and get your pixel drawn</span>
             </div>
         </div>
